try to remove security